css styles for footer added and some layout issues fixed

--- a/stylesheet/styles.css
+++ b/stylesheet/styles.css
@@ -126,21 +126,19 @@ button {
 /* Styles For Fourth Section */
 
 .fourth-container {
-    background-color: #ffffff;
+    background-color: #f9faf8;
     height: 400px;
-    margin-left: 400px;
+    width: 1920px;
+    
 }
 
 .fourth {
    background-color: #3882f6;
    color: #ffffff; 
-   display: flex;
-   flex-direction: column;
-   margin: 150px;
+   margin-top: 100px;
+   margin-left: 580px;
    border-radius: 10px;
    padding: 30px;
-   justify-content: center;
-   align-items: center;
    width: 700px;
 }
 
@@ -151,4 +149,15 @@ button {
 
 .new {
     margin-right: 470px;
+}
+
+/* Styles For Footer Section */
+.footer {
+    background-color: #1F2937;
+    color: #ffffff;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 1920px;
 }
